--- a/src/components/05-components/Covid_Badge/_index.scss
+++ b/src/components/05-components/Covid_Badge/_index.scss
@@ -9,8 +9,12 @@
 
   &__title {
     color: $regular-alpha;
-    font-family: 'LatoBold';
+    font-family: $latin-bold;
     font-size: $font-size-heading3;
+
+    .is-rtl & {
+      font-family: $arabic-bold;
+    }
   }
 
   &__subtitle {
