--- a/src/components/05-components/Covid_Badge/_index.scss
+++ b/src/components/05-components/Covid_Badge/_index.scss
@@ -7,6 +7,12 @@
   color: $dark-grey;
   padding: 10px;
 
+  .is-loading & {
+    >div {
+      visibility: hidden;
+    }
+  }
+
   &__title {
     color: $regular-alpha;
     font-family: $latin-bold;
